# open-ecc

./: Cargo.toml  Changes.md  README.md  patch.sh  publish.sh  release.sh
.github/workflows/: publish.yml  publish.yml-old
crates/ecc-api/: Cargo.toml
crates/ecc-api/src/: api.rs  contracts.rs  helpers.rs  lib.rs
crates/ecc-cli/: Cargo.toml
crates/ecc-cli/src/: main.rs
crates/ecc_cli/: Cargo.toml
crates/open_ecc/: Cargo.toml  README.md
crates/open_ecc/src/: api.rs  contracts.rs  ecc.rs  helpers.rs  lib.rs  light.rs  serialization.rs
crates/open_ecc_cli/: Cargo.toml  README.md
crates/open_ecc_cli/src/: args.rs  config.rs  main.rs
crates/open_ecc_gui/: Cargo.toml  README.md  index.html
crates/open_ecc_gui/assets/: sw.js
crates/open_ecc_gui/src/: main.rs
