[package]
name = "ecc-api"
version = "0.1.0"
edition = "2024"

[dependencies]
aes = "0.8.4"
anyhow = "1.0.98"
cbc = "0.1.2"
cipher = "0.4.4"
hex = "0.4.3"
openssl = { version = "0.10.72", features = ["vendored"] }
rand = "0.9.1"
reqwest = { version = "0.12.15", features = ["json"] }
serde = { version = "1.0.219", default-features = false, features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.45.0", features = ["full"] }
