[package]
name = "ecc-cli"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "ecc"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.98"
clap = { version = "4.5.37", features = ["derive"] }
directories = "6.0.0"
ecc-api = { path = "../ecc-api" }
serde = { version = "1.0.219", default-features = false, features = ["derive"] }
tokio = { version = "1.45.0", features = ["full"] }
toml = "0.8.22"
