[package]
name = "open_ecc_cli"
description = "Unofficial Elgato Command Centre CLI"
version.workspace = true
authors.workspace = true
repository.workspace = true
edition.workspace = true
license-file = "../../LICENSE"
readme = "README.md"

[[bin]]
name = "ecc"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.98"
clap = { version = "4.5.37", features = ["derive"] }
directories = "6.0.0"
open_ecc = { path = "../open_ecc" }
serde = { version = "1.0.219", default-features = false, features = ["derive"] }
tokio = { version = "1.45.0", features = ["full"] }
toml = "0.8.22"
